sce_include_core_HEADERS = lib4fm.h \
                           libwar.h \
                           SCENode.h \
                           SCEBox.h \
                           SCESphere.h \
                           SCEBoundingBox.h \
                           SCEBoundingSphere.h \
                           SCECollide.h \
                           SCEFrustum.h \
                           SCECamera.h \
                           SCELevelOfDetail.h \
                           SCEGeometry.h \
                           SCEOBJLoader.h \
                           SCEOctree.h \
                           SCESphereGeometry.h \
                           SCEBoxGeometry.h \
                           SCEParticle.h \
                           SCEParticleEmitter.h \
                           SCEParticleModifier.h \
                           SCEParticleProcessor.h \
                           SCEParticleSystem.h \
                           SCEJoint.h \
                           SCESkeleton.h \
                           SCEAnimatedGeometry.h \
                           SCEAnimation.h \
                           SCEMD5Loader.h \
                           SCECore.h
