sce_include_core_HEADERS = lib4fm.h \
                           libwar.h \
                           SCENode.h \
                           SCEBox.h \
                           SCESphere.h \
                           SCECone.h \
                           SCEBoundingBox.h \
                           SCEBoundingSphere.h \
                           SCECollide.h \
                           SCEFrustum.h \
                           SCECamera.h \
                           SCELevelOfDetail.h \
                           SCEImage.h \
                           SCETextureData.h \
                           SCEGeometry.h \
                           SCEGrid.h \
                           SCEVoxelStore.h \
                           SCEMarchingTetrahedra.h \
                           SCEOBJLoader.h \
                           SCEOctree.h \
                           SCESphereGeometry.h \
                           SCEBoxGeometry.h \
                           SCEConeGeometry.h \
                           SCEParticle.h \
                           SCEParticleEmitter.h \
                           SCEParticleModifier.h \
                           SCEParticleProcessor.h \
                           SCEParticleSystem.h \
                           SCEJoint.h \
                           SCESkeleton.h \
                           SCEAnimatedGeometry.h \
                           SCEAnimation.h \
                           SCEMD5Loader.h \
                           SCECore.h
